tests/sumo/spec/flow/errors/poisson_invalid/errors.sumo
Error: Invalid rate parameter for exponentially distributed period in the definition of flow 'f1'.
Quitting (on error).
